<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="progress"
            type="com.weedscomm.smartdelivery.models.entity.DeliveryResponseEntity.Progresses" />

        <import type="com.weedscomm.smartdelivery.utils.TimeUtil" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/col_ccc">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_main_top"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/col_primary"
                app:layout_constraintBottom_toBottomOf="@+id/iv_warehouse"
                app:layout_constraintEnd_toEndOf="@+id/iv_delivered"
                app:layout_constraintStart_toStartOf="@+id/iv_receipt"
                app:layout_constraintTop_toTopOf="@+id/iv_warehouse" />

            <ImageView
                android:id="@+id/iv_receipt"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/imageview_bg"
                android:src="@drawable/ic_product"
                app:layout_constraintBottom_toTopOf="@+id/tv_receipt"
                app:layout_constraintEnd_toStartOf="@+id/iv_transit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_receipt"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/receipt"
                android:textColor="@color/col_333"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_transit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/iv_transit"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/imageview_bg"
                android:src="@drawable/ic_delivery_truck"
                app:layout_constraintBottom_toBottomOf="@+id/iv_receipt"
                app:layout_constraintEnd_toStartOf="@+id/iv_warehouse"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/iv_receipt"
                app:layout_constraintTop_toTopOf="@+id/iv_receipt" />

            <TextView
                android:id="@+id/tv_transit"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/product_transit"
                android:textColor="@color/col_333"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_receipt"
                app:layout_constraintEnd_toStartOf="@+id/tv_warehouse"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_receipt"
                app:layout_constraintTop_toTopOf="@+id/tv_receipt" />

            <ImageView
                android:id="@+id/iv_warehouse"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/imageview_bg"
                android:src="@drawable/ic_warehouse"
                app:layout_constraintBottom_toBottomOf="@+id/iv_transit"
                app:layout_constraintEnd_toStartOf="@+id/iv_start_delivery"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/iv_transit"
                app:layout_constraintTop_toTopOf="@+id/iv_transit" />

            <TextView
                android:id="@+id/tv_warehouse"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/product_warehouse"
                android:textColor="@color/col_333"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_transit"
                app:layout_constraintEnd_toStartOf="@+id/tv_delivery"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_transit"
                app:layout_constraintTop_toTopOf="@+id/tv_transit" />

            <ImageView
                android:id="@+id/iv_start_delivery"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/imageview_bg"
                android:src="@drawable/ic_delivery_truck"
                app:layout_constraintBottom_toBottomOf="@+id/iv_warehouse"
                app:layout_constraintEnd_toStartOf="@+id/iv_delivered"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/iv_warehouse"
                app:layout_constraintTop_toTopOf="@+id/iv_warehouse" />

            <TextView
                android:id="@+id/tv_delivery"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/delivery_start"
                android:textColor="@color/col_333"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_warehouse"
                app:layout_constraintEnd_toStartOf="@+id/tv_delivered"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_warehouse"
                app:layout_constraintTop_toTopOf="@+id/tv_warehouse" />

            <ImageView
                android:id="@+id/iv_delivered"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/imageview_bg"
                android:src="@drawable/ic_box"
                app:layout_constraintBottom_toBottomOf="@+id/iv_start_delivery"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/iv_start_delivery"
                app:layout_constraintTop_toTopOf="@+id/iv_start_delivery" />

            <TextView
                android:id="@+id/tv_delivered"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="@string/delivered"
                android:textColor="@color/col_333"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_delivery"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_delivery"
                app:layout_constraintTop_toTopOf="@+id/tv_delivery" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_main_top">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/timeline"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>